# self-driving-car-simulator

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt
src/model/kinematics/: bicycle.cpp  bicycle.h  model.cpp  model.h
src/model/math/: point2d.cpp  point2d.h  pose2d.cpp  pose2d.h
tests/: CMakeLists.txt  test_bicycle.cpp
